--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather:wght@900&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,900&family=Roboto:wght@100;300;400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather:wght@900&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,900&family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>DEVClub Convert Money</title>
 </head>
 
 <body>
     <div class="conteiner">
 
-        <head>
+        <header>
             <h1>DEVClub Convert Money</h1>
-        </head>
+        </header>
         <main>
             <label for="">
-                Converter de
+                Converter <b>de</b>
                 <select name="" id=""> 
                     <option value=""> R$ Real brasileiro
 
@@ -30,7 +29,7 @@
             </label>
 
             <label for="">
-                Converter para
+                Converter <b>para</b>
                 <select name="" id=""> 
                     <option value=""> US$ Dólar americano  
                     </option> 
