--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather:wght@900&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,900&family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather:wght@900&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,900&family=Roboto:wght@100;300;400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>DEVClub Convert Money</title>
 </head>
@@ -21,20 +23,20 @@
         <main>
             <label for="">
                 Converter <b>de</b>
-                <select name="" id=""> 
+                <select name="" id="">
                     <option value=""> R$ Real brasileiro
 
-                    </option> 
+                    </option>
                 </select>
             </label>
 
             <label for="">
                 Converter <b>para</b>
-                <select name="" id=""> 
-                    <option value=""> US$ Dólar americano  
-                    </option> 
+                <select name="" id="">
+                    <option value=""> US$ Dólar americano
+                    </option>
                     <option value=""> € Euro
-                    </option> 
+                    </option>
                 </select>
             </label>
             <label for="">
@@ -45,23 +47,24 @@
             <button type="button">Converter</button>
 
             <section>
-                <div>
+                <div class="caixa">
                     <img src="./img/brasil 2.jpg" alt="bandeira-brasil">
-                    <p>Real</p>
-                    <p>R$ 10.000,00</p>
+                    <p class="paragrafo">Real</p>
+                    <p class="valor">R$ 10.000,00</p>
                 </div>
-                <img src="./img/Vector.jpg" alt="seta">
+                <img class="seta" src="./img/Vector.jpg" alt="seta">
 
-                <div>
+                <div class="caixa">
                     <img src="./img/estados-unidos (1) 1.jpg" alt="bandeira-pais-conversão">
-                    <p>Dolar</p>
-                    <p>US$ 10.000,00</p>
+                    <p class="paragrafo">Dolar</p>
+                    <p class="valor">US$ 10.000,00</p>
                 </div>
             </section>
-           
+
         </main>
     </div>
 
 </body>
+<script src="./scripts.js"></script>
 
 </html>
