--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
             </label>
             <label for="">
                 Valor
-                <input placeholder="R$ 10.000,00">
+                <input id="input-valor" placeholder="R$ 10.000,00">
             </label>
 
-            <button type="button">Converter</button>
+            <button id="botão" type="button">Converter</button>
 
             <section>
                 <div class="caixa">
                     <img src="./img/brasil 2.jpg" alt="bandeira-brasil">
                     <p class="paragrafo">Real</p>
-                    <p class="valor">R$ 10.000,00</p>
+                    <p class="valor" id="valor-real-texto" >R$ 10.000,00</p>
                 </div>
                 <img class="seta" src="./img/Vector.jpg" alt="seta">
 
                 <div class="caixa">
                     <img src="./img/estados-unidos (1) 1.jpg" alt="bandeira-pais-conversão">
                     <p class="paragrafo">Dolar</p>
-                    <p class="valor">US$ 10.000,00</p>
+                    <p class="valor"  id="valor-dolar-text">US$ 10.000,00</p>
                 </div>
             </section>
 
