--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -21,25 +21,24 @@
             <h1>DEVClub Convert Money</h1>
         </header>
         <main>
-            <label for="">
+            <label>
                 Converter <b>de</b>
-                <select name="" id="">
-                    <option value=""> R$ Real brasileiro
-
+                <select id="select-resultado">
+                    <option> R$ Real brasileiro
                     </option>
                 </select>
             </label>
 
-            <label for="">
+            <label>
                 Converter <b>para</b>
-                <select name="" id="">
-                    <option value=""> US$ Dólar americano
+                <select id="select-resultado">
+                    <option> US$ Dólar americano
                     </option>
-                    <option value=""> € Euro
+                    <option> € Euro
                     </option>
                 </select>
             </label>
-            <label for="">
+            <label>
                 Valor
                 <input id="input-valor" placeholder="R$ 10.000,00">
             </label>
@@ -49,15 +48,15 @@
             <section>
                 <div class="caixa">
                     <img src="./img/brasil 2.jpg" alt="bandeira-brasil">
-                    <p class="paragrafo">Real</p>
-                    <p class="valor" id="valor-real-texto" >R$ 10.000,00</p>
+                    <p class="paragrafo" id="paragrafo">Real</p>
+                    <p class="valor" id="valor-real-text">R$ 10.000,00</p>
                 </div>
                 <img class="seta" src="./img/Vector.jpg" alt="seta">
 
                 <div class="caixa">
-                    <img src="./img/estados-unidos (1) 1.jpg" alt="bandeira-pais-conversão">
-                    <p class="paragrafo">Dolar</p>
-                    <p class="valor"  id="valor-dolar-text">US$ 10.000,00</p>
+                    <img src="./img/estados-unidos (1) 1.jpg" id="bandeira-pais-conversão">
+                    <p class="paragrafo" id="paragrafo">Dólar Americano</p>
+                    <p class="valor" id="valor-dolar-text">US$ 10.000,00</p>
                 </div>
             </section>
 
