--- a/index.html
+++ b/index.html
@@ -1,69 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather:wght@900&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,900&family=Roboto:wght@100;300;400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>DEVClub Convert Money</title>
 </head>
-
 <body>
-    <div class="conteiner">
-
+    <div class="container">
         <header>
             <h1>DEVClub Convert Money</h1>
         </header>
         <main>
             <label>
-                Converter <b>de</b>
-                <select id="select-resultado">
-                    <option> R$ Real brasileiro
-                    </option>
+                Converter <strong>de</strong>
+                <select>
+                    <option>R$ Real brasileiro</option>
                 </select>
             </label>
 
             <label>
-                Converter <b>para</b>
-                <select id="select-resultado">
-                    <option> US$ Dólar americano
-                    </option>
-                    <option> € Euro
-                    </option>
+                Converter <strong>para</strong>
+                <select id="currency-select">
+                    <option>US$ Dólar americano</option>
+                    <option>€ Euro</option>
+                    <option>₿ Bitcoin</option>
                 </select>
             </label>
+
             <label>
                 Valor
-                <input id="input-valor" placeholder="R$ 10.000,00">
+                <input id="input-real" placeholder="R$ 10.000,00" type="number">
             </label>
 
-            <button id="botão" type="button">Converter</button>
+            <button id="convert-button" type="button">Converter</button>
 
             <section>
-                <div class="caixa">
+                <div class="section-container">
                     <img src="./img/brasil 2.jpg" alt="bandeira-brasil">
-                    <p class="paragrafo" id="paragrafo">Real</p>
-                    <p class="valor" id="valor-real-text">R$ 10.000,00</p>
+                    <p class="subtitleName">Real</p>
+                    <p class="currency" id="real-value-text">R$ 10.000,00</p>
                 </div>
-                <img class="seta" src="./img/Vector.jpg" alt="seta">
 
-                <div class="caixa">
-<img src="./img/estados-unidos (1) 1.jpg" id="bandeira-pais-conversão">
- <p class="paragrafo" id="paragrafo">Dólar Americano</p>
- <p class="valor" id="valor-dolar-text">US$ 10.000,00</p>
+                <img id="img-arrow" src="./img/Vector.jpg" alt="seta">
+
+                <div class="section-container">
+                    <img src="./img/estados-unidos (1) 1.jpg" alt="bandeira-eua" id="currency-img">
+                    <p class="subtitleName" id="currency-name">Dólar Americano</p>
+                    <p class="currency" id="currency-value-text">US$ 10.000,00</p>
                 </div>
             </section>
-
         </main>
     </div>
-
 </body>
-<script src="./scripts.js"></script>
 
+<script src="./scripts.js"></script>
 </html>
